--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --env-file=.env server.js",
-    "start": "node server.js",
+    "start": "node --env-file=.env server.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js "
   },
   "keywords": [],
