--- a/server/package.json
+++ b/server/package.json
@@ -25,8 +25,9 @@
     "mongoose": "^8.13.3",
     "morgan": "^1.10.0"
   },
-  "devDependencies": { 
+  "devDependencies": {
     "jest": "^29.7.0",
+    "json-2-csv": "^5.5.9",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.0"
   }
