--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "react": "^19.0.0",
