--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "stripe": "^18.1.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
