--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "node": "^22.16.0",
+    "nodemailer": "^7.0.3",
     "stripe": "^18.1.0"
   },
   "devDependencies": {
