--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
     "multer": "^2.0.1",
     "node": "^22.16.0",
     "nodemailer": "^7.0.3",
-    "stripe": "^18.1.0"
+    "stripe": "^18.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
