--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "qz-tray": "^2.2.5",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
