--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "daisyui": "^4.12.24",
     "qz-tray": "^2.2.5",
     "react": "^19.2.3",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.2.3",
+    "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
