--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@stripe/stripe-js": "^7.3.0",
     "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "daisyui": "^4.12.24",
