--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "bwip-js": "^4.7.0",
+    "cloudinary": "^2.9.0",
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -27,9 +28,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.3",
     "morgan": "^1.10.0",
-    "multer": "^2.0.1",
+    "multer": "^2.0.2",
     "node": "^22.16.0",
     "nodemailer": "^7.0.3",
+    "sharp": "^0.34.5",
+    "stream": "^0.0.3",
     "stripe": "^18.1.0",
     "uuid": "^11.1.0"
   },
