--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "multer": "^2.0.2",
     "node": "^22.16.0",
     "nodemailer": "^7.0.3",
+    "pdfkit": "^0.17.2",
     "sharp": "^0.34.5",
     "stream": "^0.0.3",
     "stripe": "^18.1.0",
